# CropProductionManagerWeb

./: .gitignore  CMakeLists.txt  README.md
apps/: Program.cpp
cmake/: Documentation.cmake  Mics.cmake
include/CropProductionManager/: iConfiguration.hpp  iLogger.hpp  inputParser.hpp
include/CropProductionManager/Api/: cropApi.h  iApi.h
include/CropProductionManager/Concept/: hasId.h
include/CropProductionManager/Core/: cropCore.h  iCore.h
include/CropProductionManager/Infrastructure/: compileTimeString.hpp  cropRepository.h  dbContext.hpp  iRepository.h  namedParametersAdapter.hpp  preparedStatementBuilder.hpp  repositoryFake.h  statementBuilder.hpp
include/CropProductionManager/InternalModel/: entity.h
include/CropProductionManager/InternalModel/Api/: crop.h
include/CropProductionManager/ModelApi/: crop.h
include/CropProductionManager/Serializer/: crop.h  serializer.h
include/CropProductionManager/Server/: dnsHandler.h  url.h  webServer.h
source/: Program.py
source/Models/: Globals.py
source/Models/Core/: Crop.py  Event.py
source/Models/Exceptions/: ErrorMessage.py  Exceptions.py  Message.py
src/Api/: cropApi.cpp  iApi.cpp
src/Concept/: hasId.cpp
src/Core/: cropCore.cpp  iCore.cpp
src/Infrastructure/: cropRepository.cpp  iRepository.cpp  namedParametersAdapter.cpp  preparedStatementBuilder.cpp  repositoryFake.cpp  statementBuilder.cpp
src/InternalModel/Api/: crop.cpp
src/InternalModel/Core/: crop.cpp
src/InternalModel/Infrastructure/: crop.cpp  plan.cpp  user.cpp
src/ModelApi/: crop.cpp
src/Serializer/: crop.cpp  serializer.cpp
src/Server/: dnsHandler.cpp  url.cpp  webServer.cpp
src/Server/Authentication/: HashDigestListener.cpp
src/Server/RequestHandler/: crop.cpp
tests/: CMakeLists.txt  main.cpp  manualTest.txt  systemTests.sh  testlib.cpp
tests/compileTimeTests/: namedParameterAdapterTests.cpp
(+6 files in other folders)
